--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,263 @@
-.App {
-  text-align: center;
+body{
+  background-color: rgb(254, 254, 255);
+  background-image: url();
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container-nav{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  
+  flex-direction: column; 
+  /* box-shadow: 12px 12px 12px rgb(162, 187, 211); */
+  /* margin-bottom: 30px; */
+  /* border-radius:  0px   0px 30px 30px; */
+  background-color: rgb(81, 128, 160);
+  /* padding: 20px; */
+  flex-wrap: wrap;
+}
+.fio{
+  display: flex;
+  flex-direction: row; 
+  /* border: 1px black solid; */
+  color: white;
+  margin: 0px 10px 0px 10px ;
+}
+.group-link{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.return-home{
+  margin-right: auto;
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.login{
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.link{
+  padding: 20px 100px;
+  text-transform: uppercase;
+  font-size: 20px;
+  text-decoration: none;
+  font-weight: bold;
+  color: aliceblue;
+  text-shadow: 2px 1px black;
 }
+
+
+.container-reports{
+  display: flex;
+  /* baborder: 1px black solid;ckground-color: rgb(227, 238, 240); */
+  background-color: white;
+  /* box-shadow: -5px 20px 25px 0px gray; */
+  /* border: 2px green solid; */
+
+  
+  /* border-radius: 30px; */
+  /* box-shadow: 10px 10px black; */
+  /* flex-direction: column; */
+  
+  /* margin-bottom: 5%; */
+  /* border: 1px rgb(21, 33, 204) solid; */
+  /* background-image: url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613546413_24-p-fon-dlya-prezentatsii-minimalizm-belii-39.jpg); */
+  
+  
+  
+}
+
+.container-reports-one{
+  display: flex;
+  justify-content: center;
+  /* border: 1px rgb(170, 221, 111) solid; */
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-evenly;
+  /* margin-bottom: 10px; */
+  
+  
+
+}
+
+.report-card{
+  display: flex;
+  /* border: 1px black solid; */
+  /* border-radius: 13px; */
+  margin-top: 2%;
+  margin-bottom: 2%;
+  width: 20em;
+  height: 15em;
+  justify-content: center;
+  
+
+}
+
+.heart{
+  border: none;
+  background: none;
+  padding: 5px; 
+  
+
+}
+
+.cont-card{
+  /* border: 2px rgb(32, 31, 34) solid; */
+  width: 100%;
+  margin: 10px;
+  /* border-radius: 13px; */
+  -webkit-transition: all 0.3s ease;;
+  -moz-transition: all 0.3s ease;;
+  -o-transition: all 0.3s ease;;
+  transition: all 0.3s ease;
+  
+  /* background-color: rgb(255, 255, 255); */
+  /* box-shadow: 2px 2px 2px 2px  gray; */
+  box-shadow: 2px 2px 2px 2px  rgb(162, 187, 211);
+  
+  
+}
+
+.cont-card:hover{
+  box-shadow: gray 10px 20px 10px;
+  margin: 0px;
+  /* background-color: rgb(178, 180, 180); */
+  border: 3px solid rgb(64, 100, 218);
+  
+  /* -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2); */
+}
+
+
+.btn{
+  padding: 10px 20px;
+  margin: 40px 40px ;
+  /* margin-left: 100px;
+  margin-right: 100px; */
+  
+  border: none;
+  background: none;
+  
+}
+
+.btn:hover{
+  cursor: grab;
+
+}
+
+.cont-buttons{
+  display: flex;
+  /* flex-direction: column; */
+  /* border: black 1px solid;  */
+  box-shadow:  -20px 3px 20px -10px rgb(162, 187, 211); 
+  
+  margin-bottom: 20px;
+  
+  
+}
+.cont-btn-choose{
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: flex-end;  */
+  /* border: 2px rgb(141, 122, 14) solid;   */
+  /* border: black 1px solid; */
+  justify-content: flex-end;
+  
+  
+
+}
+
+.book{
+  margin-right: auto; 
+  /* border: 1px solid black;  */
+  /* border: black 1px solid; */
+  
+
+}
+
+.type-group-btn{
+  box-shadow: 2px 2px 2px 2px  gray;
+  width: 350px;
+
+}
+
+.name{
+  height: 10%;
+  width: 100%;
+  text-align: center;  
+  justify-content: center;
+  /* border: 1px rgb(60, 150, 127) solid; */
+  margin-top: 0px;
+  
+  
+}
+
+.name:hover{
+  /* color: white; */
+}
+
+.all{
+  
+  /* border-radius: 30px; */
+
+
+}
+
+.img{
+  display: flex;
+  justify-content: center;
+  height: 60%;
+  /* border: 1px solid green; */
+  
+
+}
+
+.animate {
+  -webkit-animation-duration: 1s;
+  animation-duration: 3s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.three {
+  -webkit-animation-delay: 0.3s;
+  -moz-animation-delay: .3s;
+  animation-delay: .3s;
+
+  }
+
+  /*=== FADE IN LEFT ===*/
+  @-webkit-keyframes fadeInLeft {
+    from {
+      opacity: 0;
+      -webkit-transform: translate3d( 0, 0);
+      transform: translate3d( 0, 0);
+    }
+  
+    to {
+      opacity: 1;
+      -webkit-transform: none;
+      transform: none;
+    }
+  }
+  @keyframes fadeInLeft {
+    from {
+      opacity: 0;
+      -webkit-transform: translate3d( 0, 0);
+      transform: translate3d( 0, 0);
+    }
+  
+    to {
+      opacity: 1;
+      -webkit-transform: none;
+      transform: none;
+    }
+  }
+  
+  .fadeInLeft {
+    -webkit-animation-name: fadeInLeft;
+    animation-name: fadeInLeft;
+  }
